--- a/app/partials/modalConfirm.html
+++ b/app/partials/modalConfirm.html
@@ -10,6 +10,6 @@
   </div>
   <div class="footer">
     <button class="btn btn-default" ng-click="cancel()"><span class="glyphicon glyphicon-remove"></span> {{negative || 'Não'}}</button>
-    <button class="btn btn-default" ng-click="ok()"><span class="glyphicon glyphicon-ok"></span> {{positive || 'Sim'}}</button>
+    <button name="positivo" class="btn btn-default" ng-click="ok()"><span class="glyphicon glyphicon-ok"></span> {{positive || 'Sim'}}</button>
   </div>
 </div>
