--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -566,7 +566,7 @@
 </h1>
 
 <!--MODAL EMAIL-->
-<div class="modal meu-modal fade" id="modalEmail" tabindex="-1" role="dialog" aria-labelledby="modalEmail" ng-init="enderecoEmail = orcamento.pedido.cliente.email">
+<div class="modal meu-modal fade" id="modalEmail" role="dialog" aria-labelledby="modalEmail" ng-init="enderecoEmail = orcamento.pedido.cliente.email">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="header clearfix">
