--- a/app/styles/_follow_up.scss
+++ b/app/styles/_follow_up.scss
@@ -231,4 +231,40 @@
       height: 370px;
     }
   }
+
+  .modalItens{
+    .panel-heading{
+      background-color: $cor-principal-clara;
+      padding: 0;
+
+      a:hover, a:focus{
+        outline: none;
+        text-decoration: none;
+      }
+      .panel-title{
+        color: white !important;
+      }
+      .title-accordion{
+        padding: 15px;
+      }
+    }
+    .panel-body{
+      padding: 15px 0;
+      color: #333;
+    }
+    .data-caption{
+      text-align: right;
+      font-weight: bold;
+      padding: 0;
+    }
+    .data-data{
+      padding: 0 0 0 10px;
+    }
+    .striped > div:nth-child(2n){
+      background-color: #f5f5f5;;
+    }
+    .well{
+      margin-bottom: 0;
+    }
+  }
 }
