--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -1,6 +1,6 @@
 div[name="footer"] {
   .navbar {
-    height: 60px !important;
+    //height: 60px !important;
     box-shadow: 0 -2px 4px $cor-sombra;
   }
 }
@@ -37,8 +37,11 @@ div[name="footer"] {
     color: white;
     font-size: .8em;
     opacity: .8;
-    float: right;
+    //float: right;
     margin: 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
 
     a {
       text-decoration: none;
@@ -51,20 +54,64 @@ div[name="footer"] {
     }
   }
 }
-
+.footer-orcamento{
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
 .atalhos-doido {
-  width: 100%;
-  background-color: darken($cor-principal, 10);
-  position: fixed;
-  bottom: 60px;
-  height: 30px;
+  width: calc(100% - 316px); //316 tamanho do .agencia
+  //background-color: darken($cor-principal, 10);
+  //position: fixed;
+  //bottom: 60px;
+  //height: 30px;
   color: white;
-  padding: 3px 10px;
+  //padding: 3px 10px;
   text-align: center;
+  font-size: 15px;
+  display: -ms-flex;
+  display: -webkit-flex;
+  display: flex;
+  -ms-align-items: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  height: 50px;
 
   .comando {
     display: inline;
     margin-right: 20px;
     vertical-align: middle;
+  }
+  .comando:last-child{
+    margin-right: 0;
+  }
+}
+
+.atalhos-doido-box{
+  background-color: darken($cor-principal, 10);
+  padding: 3px 5px 6px;
+  border-radius: 5px;
+}
+
+@media (max-width: 992px) {
+  .footer {
+    display: block;
+  }
+  .agencia {
+    position: inherit !important;
+    margin: 5px !important;
+    text-align: center;
+  }
+  .atalhos-doido {
+    width: 100%;
+    background-color: darken($cor-principal, 10);
+    //position: fixed;
+    //bottom: 60px;
+    //height: 30px;
+    //padding: 3px 10px;
+    display: block;
+    height: auto;
   }
 }
