--- a/app/partials/modalUsuario.html
+++ b/app/partials/modalUsuario.html
@@ -50,7 +50,7 @@
         <div class="col-md-6">
           <h4>Loja</h4>
           <select class="form-control" ng-model="modal.usuario.lojaId"
-                  ng-options="l.id as l.nome for l in modal.lojas" ng-disabled="tranca()">
+                  ng-options="l.id as (l.codigo + ' - ' + l.nome) for l in modal.lojas" ng-disabled="tranca()">
             <option value="" disabled>Selecione uma loja</option>
           </select>
         </div>
