--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -520,15 +520,20 @@
       </button>
     </div>
     <div class="col-xs-6 col-md-3">
+      <button class="btn btn-orcamento" ng-click="orcamento.imprimir()">
+        <span class="glyphicon glyphicon-print hidden-xs"></span> Imprimir
+      </button>
+    </div>
+    <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento warning" ng-click="orcamento.salvar()" ng-disabled="orcamento.pedido.idStatus != 1001 || orcamento.pedido.erp">
         <span class="glyphicon glyphicon-floppy-save hidden-xs"></span> Salvar
       </button>
     </div>
-    <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento success" ng-click="orcamento.exportar()" ng-disabled="orcamento.pedido.erp || orcamento.pedido.idStatus != 1001 || !orcamento.pedido.id">
-        <span class="glyphicon glyphicon-share-alt hidden-xs"></span> Exportar
-      </button>
-    </div>
+    <!--<div class="col-xs-6 col-md-3">-->
+      <!--<button class="btn btn-orcamento success" ng-click="orcamento.exportar()" ng-disabled="orcamento.pedido.erp || orcamento.pedido.idStatus != 1001 || !orcamento.pedido.id">-->
+        <!--<span class="glyphicon glyphicon-share-alt hidden-xs"></span> Exportar-->
+      <!--</button>-->
+    <!--</div>-->
   </div>
 
   <div ng-include="'partials/opcoesOrcamentoSalvo.html'" class="opcoes salvo"></div>
