--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -20,7 +20,7 @@
 }
 
 .header_right {
-  background-image: url('../images/header_carrapeta.png');
+  background-image: url('../images/header_carton.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
