--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -244,7 +244,8 @@ $print-font-size: 11px;
 
     .logo {
       width: 192px;
-      height: 64px;
+      overflow: hidden;
+      display: block;
       //float: left;
 
       > img {
