--- a/app/partials/modalBuscarPessoa.html
+++ b/app/partials/modalBuscarPessoa.html
@@ -55,6 +55,10 @@
     <!--<div class="paginas">-->
       <!--<ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="5" items-per-page="pagination.max" ng-change="pagination.mudarPagina(nmPessoa)" class="pagination-sm"class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>-->
     <!--</div>-->
+    <div class="paginas">
+      <h3 class="text-center">{{pagination.total}} resultado{{pagination.total == 1 ? '.' : 's.'}}</h3>
+      <ul uib-pagination total-items="pagination.total" ng-model="pagination.current" items-per-page="pagination.max" max-size="3" ng-change="pagination.mudarPagina(nmPessoa)" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
+    </div>
 
   </div>
 
