--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -80,7 +80,15 @@
       </div>
       <div class="col-xs-7 col-sm-9">
         <h4>Nome</h4>
-        <input type="text" class="form-control" tabindex="-1" ng-value="orcamento.pedido.vendedor.nome" readonly="true">
+        <input name="nome-vendedor" type="text" class="form-control" ng-model="orcamento.pedido.vendedor"
+               style="transition: none"
+               keys-shortcuts prevent-default="true" shift-enter="orcamento.escapeVendedor()"
+               uib-typeahead="vendedor as vendedor.nome for vendedor in orcamento.buscaVendedorPorNome($viewValue)"
+               typeahead-template-url="partials/pessoasTypeaheadPopup.html"
+               typeahead-min-length="typeaheadVendedor.min_length"
+               typeahead-loading="isLoading"
+               typeahead-wait-ms="typeaheadVendedor.wait"
+               typeahead-on-select="orcamento.selectVendedor($item)" required>
       </div>
     </div>
   </div>
@@ -313,8 +321,20 @@
       <div class="col-xs-7 col-sm-9">
         <h4>Nome <sup>{{cliente.novo ? '1' : ''}}</sup></h4>
         <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome"
-               ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true"
+               style="transition: none"
+               ng-show="cliente.novo" keys-shortcuts prevent-default="true"
                enter="orcamento.avancar('select', 'tipo')" shift-enter="orcamento.salvar()" maxlength="60">
+
+        <input name="nome-cliente-ta" type="text" class="form-control" ng-model="orcamento.pedido.cliente" ng-show="!cliente.novo"
+               style="transition: none" keys-shortcuts prevent-default="true"
+               shift-enter="orcamento.salvar()"
+               uib-typeahead="cliente as cliente.nome for cliente in orcamento.buscaClientePorNome($viewValue)"
+               typeahead-template-url="partials/pessoasTypeaheadPopup.html"
+               typeahead-min-length="typeaheadCliente.min_length"
+               typeahead-loading="isLoading"
+               typeahead-wait-ms="typeaheadCliente.wait"
+               typeahead-on-select="orcamento.selectCliente($item)" required>
+
       </div>
       <div class="col-xs-6 col-sm-3">
         <h4>Tipo <sup>{{cliente.novo ? '1' : ''}}</sup></h4>
@@ -350,7 +370,8 @@
       <div class="col-xs-12 col-sm-3" style="padding: 0;">
         <div class="col-xs-6 col-sm-8">
           <h4>CEP <sup>{{cliente.novo ? '1' : ''}}</sup></h4>
-          <span ng-class="cliente.novo ? 'input-group' : ''">
+          <input name="cepCliente" type="text" class="form-control" ng-hide="cliente.novo" ng-value="orcamento.pedido.cliente.endereco.cep" readonly style="transition:none">
+          <span name="cepCliente" ng-class="cliente.novo ? 'input-group' : ''" ng-show="cliente.novo" style="transition:none">
             <input name="cep" type="text" class="form-control" keys-shortcuts prevent-default="true"
                    enter="cdCEP == orcamento.pedido.cliente.endereco.cep ? orcamento.avancar('input', 'endNumero') : orcamento.buscarCEP()"
                    shift-enter="orcamento.salvar()" f1="orcamento.buscarCEP(true)" ng-disabled="!cliente.novo"
@@ -391,28 +412,28 @@
       </div>
       <div class="col-xs-6 col-sm-3">
         <h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4>
-        <span class="input-group">
-          <span class="input-group-addon">&nbsp;({{orcamento.pedido.cliente.endereco.ddd || 'DDD'}})&nbsp;</span>
+        <!--<span class="input-group">-->
+          <!--<span class="input-group-addon">&nbsp;({{orcamento.pedido.cliente.endereco.ddd || 'DDD'}})&nbsp;</span>-->
           <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone"
-                 ui-mask="9999-9999" ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true"
+                 ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true"
                  enter="orcamento.avancar('input', 'ddd-cel-cliente')" shift-enter="orcamento.salvar()">
-        </span>
+        <!--</span>-->
       </div>
       <div class="col-xs-6 col-sm-3">
-        <div class="col-xs-4 col-sm-4 remove-padding">
-          <h4>DDD </h4>
-          <input name="ddd-cel-cliente" type="text" class="form-control text-right"
-                 ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo"
-                 keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'cel-cliente')"
-                 shift-enter="orcamento.salvar()">
-        </div>
-        <div class="col-xs-8 col-sm-8 remove-padding">
+        <!--<div class="col-xs-4 col-sm-4 remove-padding">-->
+          <!--<h4>DDD </h4>-->
+          <!--<input name="ddd-cel-cliente" type="text" class="form-control text-right"-->
+                 <!--ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo"-->
+                 <!--keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'cel-cliente')"-->
+                 <!--shift-enter="orcamento.salvar()">-->
+        <!--</div>-->
+        <!--<div class="col-xs-8 col-sm-8 remove-padding">-->
           <h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4>
           <input name="cel-cliente" type="text" class="form-control text-right"
-                 ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo"
+                 ng-model="orcamento.pedido.cliente.celular" ng-readonly="!cliente.novo"
                  keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'email-cliente')"
                  shift-enter="orcamento.salvar()">
-        </div>
+        <!--</div>-->
       </div>
       <div class="col-xs-12 col-sm-3">
         <h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4>
@@ -462,7 +483,7 @@
       </div>
     </div>
     <div class="col-xs-12" uib-collapse="!formularios.observacoes">
-      <textarea name="obs" cols="30" rows="10" class="form-control" ng-model="orcamento.pedido.observacoes" keys-shortcuts shift-enter="orcamento.pagamento()"></textarea>
+      <textarea name="obs" cols="30" rows="10" class="form-control" ng-model="orcamento.pedido.observacoes" keys-shortcuts shift-enter="orcamento.abrirModalPagamento()"></textarea>
     </div>
   </div>
 
@@ -502,7 +523,7 @@
           <!--</span>-->
         <!--</h5>-->
         <h5 ng-show="orcamento.pedido.pagamentos.length">
-          {{orcamento.pedido.pagamentos[0].modalidade.nome}} - {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}
+          {{orcamento.pedido.prazo.descricao}} {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}
         </h5>
         <h5 ng-hide="orcamento.pedido.pagamentos.length">
           (Nenhuma forma de pagamento)
@@ -510,7 +531,7 @@
       </div>
     </div>
     <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.pagamento()" ng-disabled="orcamento.pedido.erp">
+      <button class="btn btn-orcamento" ng-click="orcamento.abrirModalPagamento()" ng-disabled="orcamento.pedido.erp">
         <span class="glyphicon glyphicon-credit-card hidden-xs"></span> Pagamento
       </button>
     </div>
@@ -519,21 +540,21 @@
         <span class="glyphicon glyphicon-envelope hidden-xs"></span> Email
       </button>
     </div>
-    <div class="col-xs-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.imprimir()">
-        <span class="glyphicon glyphicon-print hidden-xs"></span> Imprimir
-      </button>
-    </div>
+    <!--<div class="col-xs-6 col-md-3">-->
+      <!--<button class="btn btn-orcamento" ng-click="orcamento.imprimir()">-->
+        <!--<span class="glyphicon glyphicon-print hidden-xs"></span> Imprimir-->
+      <!--</button>-->
+    <!--</div>-->
     <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento warning" ng-click="orcamento.salvar()" ng-disabled="orcamento.pedido.idStatus != 1001 || orcamento.pedido.erp">
         <span class="glyphicon glyphicon-floppy-save hidden-xs"></span> Salvar
       </button>
     </div>
-    <!--<div class="col-xs-6 col-md-3">-->
-      <!--<button class="btn btn-orcamento success" ng-click="orcamento.exportar()" ng-disabled="orcamento.pedido.erp || orcamento.pedido.idStatus != 1001 || !orcamento.pedido.id">-->
-        <!--<span class="glyphicon glyphicon-share-alt hidden-xs"></span> Exportar-->
-      <!--</button>-->
-    <!--</div>-->
+    <div class="col-xs-6 col-md-3">
+      <button class="btn btn-orcamento success" ng-click="orcamento.exportar()" ng-disabled="orcamento.pedido.erp || orcamento.pedido.idStatus != 1001 || !orcamento.pedido.id">
+        <span class="glyphicon glyphicon-share-alt hidden-xs"></span> Exportar
+      </button>
+    </div>
   </div>
 
   <div ng-include="'partials/opcoesOrcamentoSalvo.html'" class="opcoes salvo"></div>
@@ -605,3 +626,78 @@
 </div>
 <!--FIM EMAIL-->
 
+
+<!--MODAL PAGAMENTO-->
+<div class="modal meu-modal fade" id="modalPagamento" role="dialog" aria-labelledby="modalPagamento">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="header">
+        <div class="title">
+          <span class="glyphicon glyphicon-credit-card"></span>
+          Pagamento
+          <span class="glyphicon glyphicon-remove close" data-dismiss="modal"></span>
+        </div>
+      </div>
+      <div class="body condensar-rows">
+        <div class="col-md-3">
+          <h4>Código</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" name="cdPrazo" ng-model="orcamento.cdPrazo" keys-shortcuts enter="orcamento.buscarPrazoPorCodigo(orcamento.cdPrazo)" blur-to="orcamento.documento.prazo.codigo">
+            <span class="input-group-btn">
+              <button class="btn btn-default" ng-click="orcamento.buscarPrazo()">
+                <span class="glyphicon glyphicon-search"></span>
+              </button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-9">
+          <h4>Descrição</h4>
+          <input type="text" class="form-control" placeholder="Descrição do prazo" ng-model="orcamento.tempPrazo" blur-to="orcamento.pedido.prazo.descricao"
+                 keys-shortcuts enter=""
+                 uib-typeahead="prazo as prazo.descricao for prazo in orcamento.buscarPrazosPorDescricao($viewValue)"
+                 typeahead-min-length="2"
+                 typeahead-wait-ms="300"
+                 typeahead-on-select="orcamento.prepararPrazo($item)">
+        </div>
+
+        <div class="col-xs-12">
+          <h4>Parcelas</h4>
+          <table class="tabela tabela-esticada tabela-bordered" ng-hide="!orcamento.pedido.pagamentos.length">
+            <thead>
+            <tr>
+              <th></th>
+              <th>Forma de pagamento</th>
+              <th>Vencimento</th>
+              <th>Valor</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="pagamento in orcamento.pedido.pagamentos track by $index">
+              <td>{{$index + 1}}</td>
+              <td>
+                <select class="form-control" ng-options="forma as forma.descricao for forma in orcamento.pedido.prazo.formas track by forma.codigo" ng-model="pagamento.forma" ng-change="pagamento.setForma()">
+                  <option value="" disabled>Selecione a forma</option>
+                </select>
+              </td>
+              <td>{{pagamento.vencimento | date}}</td>
+              <td><input type="text" class="form-control text-right" ng-value="pagamento.valor | currency:'R$ '" readonly></td>
+            </tr>
+            </tbody>
+          </table>
+          <div ng-show="!orcamento.pedido.pagamentos.length">
+            <br>
+            <h2 class="text-center">Nenhum prazo informado</h2>
+            <br>
+          </div>
+        </div>
+
+      </div>
+      <div class="footer">
+        <button type="button" name="positive" class="btn btn-default" data-dismiss="modal">
+          <span class="glyphicon glyphicon-ok"></span> Ok
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--FIM MODAL PAGAMENTO-->
