--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -60,6 +60,35 @@
     }
   }
 
+  .navbar-collapse {
+    ul.navbar-left {
+      li {
+        width: 120px;
+        height: 50px;
+        margin: 0 15px 0 -15px;
+
+        a {
+          padding: 0;
+          width: 100%;
+          height: 100%;
+
+          &:hover, &:focus {
+            background-color: $cor-principal;
+          }
+
+          .logo {
+            width: 100%;
+            height: 100%;
+            background-image: url('../images/logo_nome_branco.png');
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+          }
+        }
+      }
+    }
+  }
+
   @media (max-width: 767px) {
     position: fixed;
     width: 100%;
