--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -12,6 +12,16 @@
     }
   }
 
+  .logo {
+    width: 100%;
+    height: 160px;
+    background-image: url('../images/logotipo.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+  }
+
   .form-login {
     width: 340px;
     height: 340px;
