--- a/app/views/buscarPedido.html
+++ b/app/views/buscarPedido.html
@@ -10,9 +10,12 @@
     <h4>&nbsp;</h4>
     <div class="row">
       <div class="col-xs-3">
+        <a href="#/orcamento/new" class="btn btn-default btn-block"><span class="glyphicon glyphicon-plus"></span> Novo</a>
+      </div>
+      <div class="col-xs-3 col-md-push-3">
         <button class="btn btn-default btn-block" ng-click="busca.atualizar()"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
       </div>
-      <div class="col-md-3 col-md-push-6">
+      <div class="col-md-3 col-md-push-3">
         <button class="btn btn-default botao-esticado" ng-click="showFiltros = !showFiltros" data-toggle="modal" data-target="#modalFiltros"><span class="glyphicon glyphicon-search"></span> Filtrar</button>
       </div>
     </div>
