--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,10 +1,11 @@
 <div class="container" style="overflow-y: auto">
   <div class="vertical-center">
     <div id="login">
-      <div class="frase">
-        <h1>Bem vindo!</h1>
-        <h2>Efetue o login para acessar o Commercial.</h2>
-      </div>
+      <!--<div class="frase">-->
+        <!--<h1>Bem vindo!</h1>-->
+        <!--<h2>Efetue o login para acessar o Commercial.</h2>-->
+      <!--</div>-->
+      <div class="logo"></div>
       <div class="card form-login">
         <!--<div class="logo-login"></div>-->
         <!--<span class="glyphicon glyphicon-lock"></span>-->
